Switch to native cassandra client

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,6 +16,10 @@ akka {
     }
   }
 
+  cassandra {
+    keyspace = "elasticqueue"
+  }
+
   cluster {
 
     roles = [adminApi,api,consumer,producer]
